# Foundry-Local

.github/workflows/: samples-integration-test.yml
docs/: Structured Outputs.md
sdk/js/: package.json
sdk_v2/cpp/: CMakeLists.txt
sdk_v2/cpp/docs/: ResumableDownloadsPlan.md
sdk_v2/cpp/src/download/: download_manager.cc  file_writer.cc  file_writer.h
sdk_v2/cpp/src/platform/: cross_process_file_lock.cc  cross_process_file_lock.h  file_io.h
sdk_v2/cpp/src/platform/posix/: cross_process_file_lock.cc  file_io.cc
sdk_v2/cpp/src/platform/windows/: cross_process_file_lock.cc  file_io.cc
sdk_v2/cpp/test/internal_api/: blob_download_state_test.cc  cross_process_file_lock_test.cc  download_test.cc  file_writer_test.cc  test_helpers.h
sdk_v2/cpp/test/utils/: temp_path.h
sdk_v2/js/: package-lock.json  package.json
www/src/routes/: +layout.svelte
